--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,8 +1,52 @@
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+
+#hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+#hamburger span {
+    height: 3px;
+    width: 25px;
+    background: #ffffff;
+    margin: 4px 0;
+    transition: 0.4s;
+}
+
 ul {
     list-style-type: none;
     display: flex;
-
+    padding: 0;
+    margin: 0;
 }
+
 li {
     margin: 10px;
+}
+
+@media (max-width: 768px) {
+    #hamburger {
+        display: flex;
+    }
+
+    ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    ul.open {
+        display: flex;
+    }
+
+    li {
+        margin: 10px 0;
+        text-align: center;
+    }
 }
