--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -64,5 +62,26 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+/* Mobile optimization */
+@media (max-width: 600px) {
+  body {
+    display: block;
+    padding: 0 20px;
+  }
+
+  h1 {
+    font-size: 2.4em;
+  }
+
+  button {
+    width: 100%;
+    padding: 0.8em;
+  }
+
+  a {
+    font-size: 1em;
   }
 }
